--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
 
 <h1>Musfiqur Rahman</h1>
 <p>
-PhD Researcher, Civil & Environmental Engineering<br>
-Villanova University<br>
-Applied Artificial Intelligence & Machine Learning for Stormwater Management and Green Stormwater Infrastructure (GSI)
+PhD Researcher in Civil & Environmental Engineering at Villanova University.<br>
+My research focuses on the application of artificial intelligence and machine learning to improve the performance, reliability, and equity of stormwater infrastructure systems, with a particular emphasis on Green Stormwater Infrastructure (GSI).
 </p>
+
+<p>
+I develop data-driven models that integrate storm event characteristics, system design parameters, environmental context, and inspection information to forecast GSI performance metrics such as ponding duration and infrastructure risk. My work bridges hydrologic science, urban stormwater management, and applied machine learning to support proactive infrastructure planning, maintenance, and decision-making.
+</p>
+
+<p>
+Through my doctoral research, coursework in advanced machine learning, and collaborative projects, I apply methods including Random Forest, gradient boosting, support vector machines, and deep learning architectures to real-world stormwater and urban hydrology problems. My broader research interests include AI-enabled infrastructure resilience, urban flooding mitigation, and data-driven approaches to sustainable water management.
+</p>
+
 
 <h2>Research Interests</h2>
 <ul>
