--- a/index.html
+++ b/index.html
@@ -3,25 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Musfiqur Rahman | Research Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: 40px auto;
-      line-height: 1.6;
-      color: #333;
-    }
-    h1, h2 {
-      color: #003366;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
