--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+  <nav>
+    <a class="active" href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="publications.html">Publications</a>
+    <a href="projects.html">Projects</a>
+    <a href="membership.html">Membership</a>
+    <a href="certifications.html">Certifications</a>
+    <a href="blog.html">My Blog</a>
+    <a href="album.html">My Album</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
 <h1>Musfiqur Rahman</h1>
 <p>
