--- a/research.html
+++ b/research.html
@@ -25,9 +25,12 @@
 
 <h2>Research Focus</h2>
 <ul>
-  <li>Applied AI/ML for Green Stormwater Infrastructure (GSI) performance forecasting</li>
-  <li>Stormwater risk prediction using storm, design, and environmental context data</li>
-  <li>Data-driven infrastructure planning and equity-informed analytics</li>
+  <li>Urban hydrology</li>
+  <li>Urban Water Systems</li>
+  <li>Hydrologic & Hydraulic Modeling</li>
+  <li>AI for Stormwater</li>
+  <li>Stormwater Infrastructure & Green Stormwater Infrastructure resilience</li>
+  <li>Data-driven infrastructure planning</li>
 </ul>
 
 <div class="footer">© Musfiqur Rahman</div>
