--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,38 @@
   <meta charset="UTF-8">
   <title>Contact | Musfiqur Rahman</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    form {
+      max-width: 600px;
+      margin-top: 30px;
+    }
+    label {
+      font-weight: bold;
+      display: block;
+      margin-top: 15px;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 6px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1em;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 18px;
+      font-size: 1em;
+      background-color: #0066cc;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #004c99;
+    }
+  </style>
 </head>
 <body>
 
@@ -24,15 +56,34 @@
 <h1>Contact</h1>
 
 <p>
-Email: <a href="mailto:mrahma05@villanova.edu">mrahma05@villanova.edu</a>
+For collaboration, supervision, speaking invitations, or research discussions, feel free to contact me using the form below.
 </p>
 
 <p>
-<a href="https://scholar.google.com">Google Scholar</a> |
-<a href="https://www.linkedin.com">LinkedIn</a> |
-<a href="https://github.com/MusfiqurRahman">GitHub</a>
+<strong>Email:</strong> mrahma05@villanova.edu<br>
+<strong>Affiliation:</strong> Villanova University<br>
+<strong>Research Area:</strong> Civil & Environmental Engineering — Stormwater & Green Infrastructure<br>
+<strong>Google Scholar:</strong> <a href="https://scholar.google.com" target="_blank">View Profile</a><br>
+<strong>LinkedIn:</strong> <a href="https://www.linkedin.com" target="_blank">View Profile</a><br>
+<strong>Location:</strong> Villanova University, Pennsylvania, USA
 </p>
 
+<h2>Contact Form</h2>
+
+<form>
+  <label for="name">Your Name</label>
+  <input type="text" id="name" name="name" placeholder="Enter your name">
+
+  <label for="email">Your Email</label>
+  <input type="email" id="email" name="email" placeholder="Enter your email">
+
+  <label for="message">Your Message</label>
+  <textarea id="message" name="message" rows="6" placeholder="Write your message"></textarea>
+
+  <button type="submit">Send Message</button>
+</form>
+
 <div class="footer">© Musfiqur Rahman</div>
+
 </body>
 </html>
