Add Advanced ML vision project

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,22 @@ using storm characteristics, design features, and environmental context.
 Integrated inspection data, land cover, and social vulnerability indicators to evaluate
 infrastructure performance risk at the city scale.
 </p>
-
+<h2>Advanced Machine Learning Vision Project</h2>
+<p>
+Graduate-level group project completed as part of <strong>ECE 8487: Advanced Machine Learning</strong> at Villanova University.
+The project involved designing and evaluating deep learning models, including a Vision Transformer (ViT),
+and integrating trained models into an application framework.
+</p>
+<p>
+<strong>My contributions:</strong> Vision Transformer (ViT) model implementation, model evaluation and metrics analysis,
+confusion matrix interpretation, and preparation of the final written report.
+</p>
+<p>
+<a href="https://github.com/MusfiqurRahman/advanced-ml-vision-project" target="_blank">
+  GitHub Repository
+</a>
+</p>
+  
 <div class="footer">© Musfiqur Rahman</div>
 </body>
 </html>
