Update Advanced ML project description

--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,10 @@ and integrating trained models into an application framework.
 confusion matrix interpretation, and preparation of the final written report.
 </p>
 <p>
+<em>Note: This was a collaborative graduate course project.</em>
+</p>
+
+<p>
 <a href="https://github.com/MusfiqurRahman/advanced-ml-vision-project" target="_blank">
   GitHub Repository
 </a>
