Add Morland CIS project

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,18 @@ confusion matrix interpretation, and preparation of the final written report.
   GitHub Repository
 </a>
 </p>
-  
+<h2>Morland Catchment Information System (CIS)</h2>
+<p>
+Developed a catchment-scale decision support tool to explore how land-use change and climate change scenarios
+affect hydrologic response using an Excel-based model with VBA automation.
+</p>
+<p>
+<a href="https://morlandrangers.wixsite.com/home/about-us" target="_blank">
+  Project Page (Wix)
+</a>
+</p>
+
+
 <div class="footer">© Musfiqur Rahman</div>
 </body>
 </html>
