--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,11 @@ affect hydrologic response using an Excel-based model with VBA automation.
   Project Page (Wix)
 </a>
 </p>
+<p>
+<a href="https://github.com/MusfiqurRahman/morland-cis-excel-model" target="_blank">
+  Model & Files (GitHub)
+</a>
+</p>
 
 
 <div class="footer">© Musfiqur Rahman</div>
