--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <p class="intro">
       My work develops data-driven models that integrate storm event characteristics, system design parameters,
-      environmental context, and inspection information to forecast GSI performance metrics (e.g., ponding duration)
+      environmental context, and inspection information to forecast GSI performance metrics
       and support proactive maintenance and planning.
     </p>
 
