--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Musfiqur Rahman | Academic Portfolio</title>
+  <meta name="description" content="Musfiqur Rahman is a PhD researcher at Villanova University specializing in artificial intelligence and machine learning applications for green stormwater infrastructure, urban hydrology, and infrastructure resilience.">
   <link rel="stylesheet" href="style.css">
   <style>
     .hero {
