--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
 
 <div class="role">Civil & Environmental Engineer — Applied AI/ML for Stormwater Systems</div>
 
+<p style="margin-top:6px; color:#555;">
+  <strong>Musfiqur Rahman</strong><br>
+  PhD Researcher, Civil & Environmental Engineering<br>
+  Villanova University, USA
+</p>
+
+  
 <div class="hero">
   <div>
     <h1>Hi, I’m Musfiqur Rahman.</h1>
