--- a/index.html
+++ b/index.html
@@ -178,6 +178,22 @@
   </div>
 </div>
 
+<div class="social-icons" style="margin-top:30px; text-align:center;">
+  <a href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank" style="margin:0 12px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg"
+         alt="Google Scholar"
+         width="36">
+  </a>
+
+  <a href="https://www.linkedin.com/in/musfiqur37/" target="_blank" style="margin:0 12px;">
+    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+         alt="LinkedIn"
+         width="36">
+  </a>
+</div>
+
+
+  
 <div class="footer">
   © 2026 Musfiqur Rahman. All rights reserved.
 </div>
