--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
       border: 0;
       border-top: 1px solid #eee;
     }
+    .social-icons img {
+  filter: grayscale(100%);
+  opacity: 0.75;
+  transition: all 0.3s ease;
+}
+
+.social-icons a:hover img {
+  filter: grayscale(0%);
+  opacity: 1;
+  transform: translateY(-3px);
+}
+   
   </style>
 </head>
 
