--- a/index.html
+++ b/index.html
@@ -191,18 +191,38 @@
 </div>
 
 <div class="social-icons" style="margin-top:30px; text-align:center;">
-  <a href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank" style="margin:0 12px;">
+  <a href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg"
-         alt="Google Scholar"
-         width="36">
+         alt="Google Scholar" width="36">
   </a>
 
-  <a href="https://www.linkedin.com/in/musfiqur37/" target="_blank" style="margin:0 12px;">
+  <a href="https://www.linkedin.com/in/musfiqur37/" target="_blank">
     <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
-         alt="LinkedIn"
-         width="36">
+         alt="LinkedIn" width="36">
+  </a>
+
+  <a href="https://www.researchgate.net/profile/Musfiqur-Rahman-20?ev=hdr_xprf" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111728.png"
+         alt="ResearchGate" width="36">
+  </a>
+
+  <a href="https://villanova.academia.edu/MusfiqurRahman" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png"
+         alt="Academia.edu" width="36">
+  </a>
+
+  <a href="https://github.com/MusfiqurRahman" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+       alt="GitHub" width="36">
+</a>
+
+  
+  <a href="https://orcid.org/my-orcid?orcid=0009-0002-9865-6739" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/ORCID_iD.svg"
+         alt="ORCID" width="36">
   </a>
 </div>
+
 
 
   
