--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
   </a>
 
   <a href="https://www.researchgate.net/profile/Musfiqur-Rahman-20?ev=hdr_xprf" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111728.png"
-         alt="ResearchGate" width="36">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate" width="36">
+
   </a>
 
   <a href="https://villanova.academia.edu/MusfiqurRahman" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png"
-         alt="Academia.edu" width="36">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Academia-logo-2021.svg" alt="Academia.edu" width="36">
+
   </a>
 
   <a href="https://github.com/MusfiqurRahman" target="_blank">
