--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,8 @@
 
       <button type="submit" class="btn">Send Message</button>
 
-    </form>
+    <form action="https://formspree.io/f/maqnzprb" method="POST">
+
 
   </div>
 
