--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,13 @@
   feel free to contact me using the form below.
 </p>
 
+<script>
+  const params = new URLSearchParams(window.location.search);
+  if (params.get("sent") === "true") {
+    document.write('<p style="color:#2e7d32; font-weight:bold;">Thank you! Your message has been sent successfully.</p>');
+  }
+</script>  
+  
 <div class="contact-grid">
 
   <!-- LEFT COLUMN: INFO + MAP -->
@@ -78,12 +85,17 @@
   </div>
 
   <!-- RIGHT COLUMN: FORM CARD -->
+  
+  
   <div class="contact-card">
 
     <h2>Contact Form</h2>
 
     <!-- Visual form (can be connected later to Formspree / EmailJS) -->
     <form>
+
+
+
 
       <label><strong>Your Name</strong></label>
       <input type="text" placeholder="Enter your name">
@@ -97,7 +109,8 @@
       <button type="submit" class="btn">Send Message</button>
 
     <form action="https://formspree.io/f/maqnzprb" method="POST">
-
+      
+    <input type="hidden" name="_redirect" value="https://musfiqurrahman.github.io/contact.html?sent=true">
 
   </div>
 
