--- a/contact.html
+++ b/contact.html
@@ -98,13 +98,13 @@
 
 
       <label><strong>Your Name</strong></label>
-      <input type="text" placeholder="Enter your name">
+      <input type="text" name="name" placeholder="Enter your name" required>
 
       <label><strong>Your Email</strong></label>
-      <input type="email" placeholder="Enter your email">
+      <input type="email" name="email" placeholder="Enter your email" required>
 
       <label><strong>Your Message</strong></label>
-      <textarea rows="6" placeholder="Write your message"></textarea>
+      <textarea name="message" rows="6" placeholder="Write your message" required></textarea>
 
       <button type="submit" class="btn">Send Message</button>
 
