--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
     <!-- Visual form (can be connected later to Formspree / EmailJS) -->
     <form>
 
-
+      <input type="text" name="_gotcha" style="display:none">
 
 
       <label><strong>Your Name</strong></label>
