--- a/contact.html
+++ b/contact.html
@@ -97,14 +97,17 @@
       <input type="text" name="_gotcha" style="display:none">
 
 
-      <label><strong>Your Name</strong></label>
-      <input type="text" name="name" placeholder="Enter your name" required>
+      <label for="name"><strong>Your Name</strong></label>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-      <label><strong>Your Email</strong></label>
-      <input type="email" name="email" placeholder="Enter your email" required>
 
-      <label><strong>Your Message</strong></label>
-      <textarea name="message" rows="6" placeholder="Write your message" required></textarea>
+      <label for="email"><strong>Your Email</strong></label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+
+      <label for="message"><strong>Your Message</strong></label>
+      <textarea id="message" name="message" rows="6" placeholder="Write your message" required></textarea>
+
 
       <button type="submit" class="btn">Send Message</button>
 
