--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </nav>
 </header>
 
-<div class="role">Civil & Environmental Engineer — Applied AI/ML for Stormwater Systems</div>
+<div class="role">Civil & Environmental Engineer</div>
 
 <p style="margin-top:6px; color:#555;">
   <strong>Musfiqur Rahman</strong><br>
