--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
   <div class="photo">
     <!-- Replace profile.jpg with your actual image filename after uploading -->
-    <img src="profile.jpg" alt="Photo of Musfiqur Rahman" style="border-radius: 12px; max-width: 240px;">
+    <img src="profile.jpg" alt="Musfiqur Rahman" style="border-radius: 12px; max-width: 240px;">
     <div class="caption">Photo of Musfiqur Rahman</div>
   </div>
 </div>
