--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,7 @@
 <h1>Contact</h1>
 
 <p>
-  For collaboration, supervision, speaking invitations, or research discussions,
-  feel free to contact me using the form below.
+  For research collaboration, academic supervision, professional opportunities, speaking invitations, or general inquiries, please feel free to contact me using the form below.
 </p>
 
 <script>
