--- a/projects.html
+++ b/projects.html
@@ -22,18 +22,21 @@
 
 <h1>Projects</h1>
 
-<h2>AI-Driven GSI Performance Forecasting</h2>
+<h2>Academic & Research Projects</h2>
+
+<h3>AI-Driven GSI Performance Forecasting</h3>
 <p>
 Developed machine learning models (Random Forest, XGBoost, SVM, LSTM) to predict ponding duration
 using storm characteristics, design features, and environmental context.
 </p>
 
-<h2>Urban Stormwater Risk Assessment</h2>
+<h3>Urban Stormwater Risk Assessment</h3>
 <p>
 Integrated inspection data, land cover, and social vulnerability indicators to evaluate
 infrastructure performance risk at the city scale.
 </p>
-<h2>Advanced Machine Learning Vision Project</h2>
+
+<h3>Advanced Machine Learning Vision Project</h3>
 <p>
 Graduate-level group project completed as part of <strong>ECE 8487: Advanced Machine Learning</strong> at Villanova University.
 The project involved designing and evaluating deep learning models, including a Vision Transformer (ViT),
@@ -46,13 +49,13 @@ confusion matrix interpretation, and preparation of the final written report.
 <p>
 <em>Note: This was a collaborative graduate course project.</em>
 </p>
-
 <p>
 <a href="https://github.com/MusfiqurRahman/advanced-ml-vision-project" target="_blank">
   GitHub Repository
 </a>
 </p>
-<h2>Morland Catchment Information System (CIS)</h2>
+
+<h3>Morland Catchment Information System (CIS)</h3>
 <p>
 Developed a catchment-scale decision support tool to explore how land-use change and climate change scenarios
 affect hydrologic response using an Excel-based model with VBA automation.
@@ -68,6 +71,41 @@ affect hydrologic response using an Excel-based model with VBA automation.
 </a>
 </p>
 
+<hr class="divider">
+
+<h2>Professional Projects</h2>
+
+<h3>National Water Resources Modeling & Decision Support — Bangladesh</h3>
+<p>
+<strong>Institute of Water Modelling (IWM), Dhaka, Bangladesh</strong>
+</p>
+<p>
+Contributed to large-scale, government-commissioned water resources and urban infrastructure projects supporting flood
+risk management, water supply planning, river pollution control, and environmental impact assessment across Bangladesh.
+These projects informed national and municipal decision-making and provide the applied foundation for my current research
+on AI-enabled and data-driven infrastructure resilience.
+</p>
+
+<p><strong>Key focus areas included:</strong></p>
+<ul>
+  <li>Urban stormwater and flood modeling using <strong>SWMM, MIKE11/MIKE URBAN, HEC-RAS</strong>, and GIS-based analyses</li>
+  <li>Flood inundation mapping, drainage master planning, and feasibility studies for rapidly growing municipalities</li>
+  <li>River water quality modeling and pollution source assessment using <strong>MIKE11–ECO Lab</strong> and Python-based data analysis</li>
+  <li>Reservoir water balance, hydrodynamic modeling, and operational scenario analysis for industrial water supply systems</li>
+  <li>Environmental and social impact assessment (ESIA/SEIA), including air quality modeling and mitigation planning</li>
+  <li>National-scale hydrologic data quality control, statistical analysis, and database development to support long-term water planning</li>
+</ul>
+
+<p><strong>Representative government clients:</strong></p>
+<p>
+DPHE, DWASA, BEZA, WARPO, and the Embassy of the Kingdom of the Netherlands (Joint Bangladesh–Netherlands Programme).
+</p>
+
+<p>
+This professional experience involved close collaboration with government agencies, international partners, and multidisciplinary
+teams, translating complex modeling outputs into actionable recommendations for infrastructure investment, environmental protection,
+and long-term resilience planning.
+</p>
 
 <div class="footer">© Musfiqur Rahman</div>
 </body>
