--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,10 @@ affect hydrologic response using an Excel-based model with VBA automation.
 
 <h3>National Water Resources Modeling & Decision Support — Bangladesh</h3>
 <p>
-<strong>Institute of Water Modelling (IWM), Dhaka, Bangladesh</strong>
+<strong>
+  <a href="https://www.iwmbd.org" target="_blank">Institute of Water Modelling (IWM)</a>, Dhaka, Bangladesh
+</strong>
+
 </p>
 <p>
 Contributed to large-scale, government-commissioned water resources and urban infrastructure projects supporting flood
