--- a/index.html
+++ b/index.html
@@ -172,10 +172,16 @@
     risk indicators for decision-making.
   </p>
   <p>
-    Tools and methods I frequently use include Python, scikit-learn, gradient boosting (e.g., XGBoost/LightGBM),
-    support vector machines, and deep learning architectures, along with stormwater modeling and GIS-derived context
-    variables.
+  Tools and methods I frequently use include Python for data processing and machine learning (e.g., XGBoost/LightGBM, support vector machines, and deep learning architectures), process-based hydrologic and hydraulic modeling using EPA SWMM, HEC-HMS, and HEC-RAS, and spatial analysis with ArcGIS and GIS-derived context variables to integrate physical system behavior with data-driven insights.
   </p>
+
+  <p>
+    My research builds upon prior professional experience supporting large-scale water resources and
+    infrastructure projects, extending this work through artificial intelligence and machine learning
+    to improve stormwater system performance and resilience in the United States.
+  </p>
+
+  
 </div>
 
 <hr class="divider">
