--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <!-- Right: Photo + CV button -->
   <div class="photo">
     <img src="profile.jpg" alt="Musfiqur Rahman">
-    <div class="caption">Photo of Musfiqur Rahman</div>
+    <div class="caption">Musfiqur Rahman</div>
 
     <!-- CV button under photo only -->
     <a class="cv-btn" href="cv.pdf" target="_blank">⬇ Download My CV</a>
